package br.ufsc.inf.leobr.cliente;

import java.io.Serializable;

/**
 * Define a interface que deve ser implementada pelos objetos que desejarem 
 * trafegar atrav?s do servidor/framework.
 * 
 * @author leonardo.brasil
 *
 */
public interface Jogada extends Serializable {

}
